<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ruckig</name>
  <version>0.12.2</version>
  <description>Instantaneous Motion Generation for Robots and Machines.</description>
  <author>Lars Berscheid</author>
  <maintainer email="lars.berscheid@ruckig.com">Lars Berscheid</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
